--- a/templates/librarypage.html
+++ b/templates/librarypage.html
@@ -32,7 +32,7 @@
         </div>
         <div class="Toggler">
             <form method="post">
-                <input type="hidden" name="key" value="{{book.key()}}">
+                <input type="hidden" name="key" value="{{book.key}}">
                 <input type="submit" value="toggle activation">
                 <input type="hidden" name="act" value="toggle">
             </form>
@@ -40,7 +40,7 @@
         <div class="ImageUploader">
             <form method="post" enctype="multipart/form-data">
                 <input type="hidden" name="act" value="new_img">
-                <input type="hidden" name="key" value="{{book.key()}}">
+                <input type="hidden" name="key" value="{{book.key}}">
                 <input type="file" name="new_img">
                 <input type="submit" value="add/change image">
             </form>
