--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,122 +1,109 @@
-﻿body {
-    font-family: Helvetica, Verdana, Arial, sans-serif;
-    margin: 0px;
-    padding: 0px;
+ul.instant
+{
+    text-decoration: none;
+    display: inline;
 }
 
-p, h1, h2, h3 {
-    margin: 1px;
-    padding: 0px; 
-}
-
-h1, h2 {
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-h3 {
-    margin-bottom: 5px;
-}
-
-div {
+ul.instant li
+{
+    display: inline;
+    padding-right: 24px;
+    margin: 2px;
     float: left;
+}
+
+ul.TablePhotos
+{
+    text-decoration: none;
+    display: inline;
+}
+
+ul.TablePhotos li
+{
+    display: inline;
+    padding: 2px;
+}
+
+ul.Message
+{
+    list-style-type: none;
+    display: inline;
+}
+
+ul.Message li
+{
+    background-color: #eee;
+    padding: 2px;
+    padding-left: 12px;
+    margin: 2px;
+}
+
+p.MessageStamp
+{
+    font-size: 8pt;
     padding: 0px;
-    margin: 0px;
-    border: 1px dashed blue; /*for debugging*/
+    margin: 2px;
+}
+
+body
+{
+    font-family: serif;
+    padding: 4px;
     width: auto;
 }
 
-div.OverWrapper {
-    margin: 0px;
-    padding: 0px;
+div
+{
+    float: none;
+    width: fit-content;
+    height: fit-content;
+    margin: 4px;
+    padding: 4px;
 }
 
-div.Headline {
-    background-color: #ddddff;
-    width: 95%;
-}
-
-div.BlockWrapper {
-    width: 95%;
+div.PanelBlock
+{
+    float: left;
+    min-width: 30%;
     border: 1px solid red;
 }
 
-div#UserPhoto {
-    width: auto;
-    text-align: center;
-}
-
-div#UserInfo {
-    width: auto;
-}
-
-div#UserInfo div {
-    width: 95%;
-}
-
-div.Message {
-    width: 95%;
-    background-color: #dddddd;
-}
-
-div.Sub_BlockWrapper {
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-div.ChartWrapper {
-    width: 95%;
-}
-div.ChartWrapper div {
-    border: none;
-}
-
-div.BookContainer, div.GameContainer {
-    width: auto;
-    margin-top: auto;
-    margin-bottom: auto;
-    height: 160px;
-    padding: 10px;
-}
-
-div.BookDescription, div.GameDescription {
-    margin-left: 10px;
-    margin-top:0px;
-    width: auto;
-}
-
-div.ImageContainer {
-    margin: 0px;
-    padding: 5px;
-}
-
-div.ImageContainer img {
-    margin: 0px;
-    padding: 0px;
-}
-
-textarea {
-    width: 50%;
-}
-
-div.PanelWrapper {
-    width: 95%;
-}
-
-div.PanelWrapper h2 {
-    text-align: left;
-}
-
-div#Shortcuts form {
+div.PanelBlockWide
+{
     float: left;
-    margin: 10px;
+    min-width: 90%;
+    border: 1px solid red;
 }
 
-div.LibItem {
-    width: 95%;
+div.PanelBlockWide textarea
+{
+    width: 80%;
+    height: 6em;
+    margin-left: 12px;
+    margin-bottom: 12px;
 }
 
-div.Toggler {
-    float: right;
+div.TableBlock
+{
+    float: left;
+    min-width: 45%;
+    width: fit-content;
+    height: fit-content;
+    border: 1px solid blue;
+}
+
+div.TableBlockWide
+{
+    float: left;
+    min-width: 90%;
+    width: fit-content;
+    height: fit-content;
+    border: 1px solid blue;
+}
+
+div.ChartWrapper
+{
+    border: 1px dashed blue;
+    margin: 2px;
+    padding: 2px;
 }
