--- a/templates/table.html
+++ b/templates/table.html
@@ -36,7 +36,7 @@
     <h2>Sleep</h2>
     <ul>
       <li>Latest waking: <span id="sleep_latest"></span></li>
-      <li>Latest duration: <span id="sleep_latest_dur"></span></li>
+      <li>Latest duration: <span id="sleep_latest_dur"></span> hours</li>
       <li>Semester mean: <span id="sleep_semester_mean"></span> hours</li>
       <li>Last week mean: <span id="sleep_last_week_mean"></span> hours</li>
       <li>This week deficit: <span id="sleep_week_deficit"></span> hours</li>
@@ -64,7 +64,6 @@
 
   <div class="TableBlock">
     <h2>Meal</h2>
-    <p>Latest:</p>
     <div id="meals_latests"></div>
     <div class="ChartWrapper" id="chart_meal_histo"></div>
   </div>
