--- a/templates/panel.html
+++ b/templates/panel.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+  <meta name="viewport" content="width=device.width, initial-scale=1.0">
   <link type="text/css" rel="stylesheet" href="/stylesheets/main.css">
   <title>Coffee Table :: Panel</title>
 </head>
